Finished 'Getting started with the web'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+<!-- layout: default -->
 title: Home
 date: 6/12/2021
 ---
@@ -15,3 +15,5 @@ date: 6/12/2021
   <li><a href="https://marginalrevolution.com/">marginal revolution blog</a></li>
 </ul>
 <img src="/images/may2021_ratings.png" alt="Cable news ratings" />
+<button>Change user</button>
+<script src="scripts/main.js"></script>
