Adjusted layout of website to include projects; also adjusted nav-bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ description: Home page for ncrispino.
     Questions:
   </p>
   <ul>
+    <li>Should I put recent article & project snippets here?</li>
     <li>What's the best measure of inflation?</li>
     <li>Should the Fed create its own digital currency?</li>
     <li><a href="https://marginalrevolution.com/">marginal revolution blog</a></li>
