--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Home page for ncrispino.
 <!-- This is the 'content' put in the layout file 'default' -->
 <main>
   <h1 id="top">{{ page.title }}</h1>
-  <ul id="main_list">
+  <ul id="main_list" class="shifted">
     {% for project in site.projects limit:1 %}
       <li>
         <h2><a href="{{ project.url }}">{{ project.title }}</a></h2>
