--- a/project-page.html
+++ b/project-page.html
@@ -1,7 +1,7 @@
 ---
 title: Projects
 ---
-<h1 class="recent">Latest Projects</h1>
+<h1>Latest Projects</h1>
 
 <ul class="shifted">
   {% for project in site.projects %}
