final changes before deleting a bunch of stuff and playing around

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Home page for ncrispino.
 <!-- This is the 'content' put in the layout file 'default' -->
 <main id="page-top">
   <!-- <h1 id="top">{{ page.title }}</h1> -->
-  <input id="toggle" type="button" onclick="show()"/>
+  <!-- <input id="toggle" type="button" onclick="show()"/> -->
   <ul id="main_list" class="shifted">
     {% for project in site.projects limit:1 %}
       <li class="home-post" id="show-proj">
